<resources>
    <string name="app_name">AssignmentOne</string>
    <string name="mainTitle">Pay Calculator</string>
    <string name="pay">Pay</string>
    <string name="overtime">Overtime</string>
    <string name="tax">Tax</string>
    <string name="totalPay">Total Pay</string>
    <string name="calculate">Calculate</string>
    <string name="aboutButton">About Me</string>
    <string name="myName">Name: Casey Hsu</string>
    <string name="myId">Student Id: 101376814</string>
</resources>